--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@
     unbind C-b
 
 # 設定ファイルの再読み込み
-    bind r source-file ~/.tmux.conf; display-message "Reload Config!!"
+    bind r source-file ~/dotfiles/.tmux.conf\; display-message "Reload Config!!"
 
 # Option
     set-window-option -g mode-keys vi
@@ -15,10 +15,9 @@
 
 
 # Mouse
-    set-option mouse-select-pane on
     set-option -g mouse-select-pane on
     set-option -g mouse-resize-pane on
-    set-option -g mode-mouse on #scroll
+    set -g mode-mouse on #scroll
 
 # keybind 
     # 分割画面の移動をvim風に
@@ -40,11 +39,11 @@
     set-option -g status on
     set-option -g status-interval 2
     set-option -g status-utf8 on
-	set-option -g status-justify "left"
+    set-option -g status-justify "left"
     set-option -g status-left-length 70
     set-option -g status-right-length 130
-	set -g status-left "#(~/tmux-powerline/powerline.sh left)" 
-	set -g status-right "#(~/tmux-powerline/powerline.sh right)"
+	  set -g status-left "#(~/tmux-powerline/powerline.sh left)" 
+	  set -g status-right "#(~/tmux-powerline/powerline.sh right)"
 #    set -g status-left "#(~/status-left.sh)"
 #    set -g status-right "#(~/status-right.sh)"
 
@@ -55,3 +54,7 @@
 
     #256色ターミナル
     set-option -g default-terminal "screen-256color"
+
+    #tmux使用時にログインシェルを指定
+    set-option -g default-shell /usr/local/bin/bash
+    set-option -g default-command /usr/local/bin/bash
