--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,13 +26,13 @@
     bind k select-pane -U
     bind l select-pane -R
     # 分割画面のサイズ変更
-    bind -r C-h resize-pane -L 1
-    bind -r C-j resize-pane -D 1
-    bind -r C-k resize-pane -U 1
-    bind -r C-l resize-pane -R 1
+    bind -r C-h resize-pane -L 
+    bind -r C-j resize-pane -D 
+    bind -r C-k resize-pane -U
+    bind -r C-l resize-pane -R
     # 画面分割
-    bind s split-window -v
-    bind v split-window -h
+    bind s split-window -v -c '#{pane_current_path}'
+    bind v split-window -h -c '#{pane_current_path}'
 
 ### tmux-prompt###
     # tmux-powerline
